--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "mocha",
     "seeddemo": "node_modules/.bin/sequelize db:seed"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
+    "body-parser": "~1.13.2",
     "cors": "^2.8.5",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
@@ -26,7 +26,14 @@
     "sequelize": "^4.22.15",
     "sequelize-cli": "^5.4.0",
     "swagger-jsdoc": "^1.3.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "bluebird": "^3.3.4",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "pg-promise": "^3.2.3",
+    "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
