--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "uuid": "^3.1.0",
     "bluebird": "^3.3.4",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
+    "debug": ">=2.6.9",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
+    "morgan": ">=1.9.1",
     "pg-promise": "^3.2.3",
     "serve-favicon": "~2.3.0"
   },
